# Plate2Board

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/: generate.py  parse.py  version.py
backend/app/models/: schemas.py
backend/app/services/: embed_footprints.py  footprints.py  matrix.py  mcu.py  netlist.py  pcb.py  plate_svg.py  project.py  schematic.py  svg_parser.py
backend/app/services/routing/: client.py  dsn.py  islands.py  jobs.py  runner.py  ses.py
backend/kicad_symbols/: Keyboard_LED.kicad_sym  Keyboard_MCU.kicad_sym
backend/scripts/: repro_unattached.py  verify_routing_e2e.py
backend/tests/: conftest.py  test_embed_footprints.py  test_islands.py  test_matrix.py  test_mcu.py  test_netlist.py  test_pcb.py  test_plate_svg.py  test_project.py  test_routing.py  test_schematic.py  test_svg_parser.py
frontend/: index.html  nginx.conf  package.json  vite.config.ts
frontend/src/: App.tsx  styles.css  types.ts
frontend/src/api/: client.ts
frontend/src/components/: MatrixGrid.tsx  NumberInput.tsx  OrientationHelp.tsx  SvgPreview.tsx  UploadStep.tsx
