[project]
name = "keeb-layout-bot-backend"
version = "0.13.3"
description = "Keyboard KiCad AutoDesigner backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0.0",
    "svgpathtools>=1.6.1",
    "shapely>=2.0.0",
    "lxml>=5.0.0",
    "python-multipart>=0.0.9",
    "skidl>=2.2.0",
    # httpx is also used by FastAPI's TestClient (was dev-only) but the
    # routing service uses it at runtime to talk to the freerouting sidecar.
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
